<resources>
    <string name="app_name">Waser</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="name">Nom</string>
    <string name="total">Total</string>

    <string name="listt_new">Créer nouvelle Liste</string>
    <string name="listt_edit">Modifier Liste</string>
    <string name="listt_delete">Supprimer Liste</string>

    <string name="card_new">Créer nouvelle Tâche</string>
    <string name="card_edit">Modifier Tâche</string>
    <string name="card_delete">Supprimer Tâche</string>

    <string name="user_new">S\'inscrire</string>
    <string name="user_edit">Modifier Utilisateur</string>
    <string name="user_delete">Supprimer Utilisateur</string>

    <string name="project_new">Créer nouveau Projet</string>
    <string name="project_edit">Modifier Projet</string>
    <string name="project_delete">Supprimer Projet</string>

    <string name="check_burndown_chart">Burndown Chart</string>
    <string name="burndown_chart_title">BurnDown Chart</string>
    <string name="home_title">Vos Projets</string>
    <string name="points">Points</string>
    <string name="error_msg_name_required">Le nom est obligatoire</string>
    <string name="error_msg_start_date_required">La date début est obligatoire</string>
    <string name="error_msg_start_hour_required">L\'heure de début est obligatoire</string>
    <string name="error_msg_end_date_required">La date de fin est obligatoire</string>
    <string name="error_msg_end_hour_required">L\'heure de fin est obligatoire</string>
    <string name="sign_in">Se connecter</string>
    <string name="register_quesiton">Pas de compte?</string>
    <string name="register">S\'inscrire</string>
    <string name="email">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="error_msg_first_name_required">Le prénom est obligatoire</string>
    <string name="error_msg_last_name_required">Le nom est obligatoire</string>
    <string name="error_msg_email_required">L\'adresse mail est obligatoire</string>
    <string name="error_msg_password_required">Le mot de passe est obligatoire</string>
    <string name="error_msg_invalide_login">L\'utilisateur ou le mot de passe ne sont pas corrects</string>
    <string name="sync">Syncroniser données</string>
    <string name="title_activity_project_nd">ProjectNDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="project">Projet</string>
    <string name="logout">Déconnexion</string>
    <string name="title_activity_projects1">Projects1Activity</string>
    <string name="error_msg_end_date_before_start_date">La date début ne peut pas être avant la date fin</string>
    <string name="this_user_name">Android Studio</string>
    <string name="this_user_email">android.studio@android.com</string>
    <string name="user_added">Utilisateur %s ajouté</string>
    <string name="user_updated">Utilisateur %s modifié</string>
    <string name="listt_added">Liste %s ajoutée</string>
    <string name="listt_updated">Liste %s modifiée</string>
    <string name="project_added">Projet %s ajouté</string>
    <string name="project_updated">Projet %s modifié</string>
    <string name="card_added">Tâche %s ajoutée</string>
    <string name="card_updated">Tâche %s modifiée</string>
    <string name="invite">Partager le Projet</string>
</resources>
