<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_edit"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/user_edit" />
        <item
            android:id="@+id/nav_user_delete"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/project">
        <menu>
            <item
                android:id="@+id/nav_project_edit"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/project_edit" />
            <item
                android:id="@+id/nav_check_burndown_chart"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/check_burndown_chart" />
            <item
                android:id="@+id/nav_project_sync"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sync" />
        </menu>
    </item>

</menu>
